--- a/src/components/fadeInText/fadeInText.css
+++ b/src/components/fadeInText/fadeInText.css
@@ -1,13 +1,9 @@
 .revealText {
-    width: 90%;
+    height: calc(50% - 50vw * 0.25);
     color: white;
-    font-size: 5em;
-    position: absolute;
-    top: 80%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     padding: 10px;
     text-align: center;
+    overflow: hidden;
 }
 
 .revealText span {
